tests/async/async.exp

async.js: inconsistent use of library definitions
[LIB] core.js:343:1,370:1: Promise
This type is incompatible with
[LIB] core.js:373:31,44: union type

async.js:12:30,33: boolean
This type is incompatible with
async.js:13:10,10: number

async.js:13:10,10: number
This type is incompatible with
async.js:12:30,33: boolean

async2.js:7:11,21: await
Error:
async2.js:3:10,11: number
This type is incompatible with
async2.js:9:10,15: string

async3.js:23:11,21: await
Error:
async3.js:26:10,15: number
This type is incompatible with
[LIB] core.js:343:1,370:1: Promise

async3.js:23:11,21: await
Error:
async3.js:30:10,15: string
This type is incompatible with
[LIB] core.js:343:1,370:1: Promise

await_not_in_async.js:5:9,9: Unexpected number

await_not_in_async2.js:6:9,9: Unexpected number

await_not_in_async3.js:6:9,9: Unexpected number

Found 9 errors
